# stellar-zk-sudoku

./: README.md
circuits/: Prover.toml
circuits/src/: main.nr
contracts/sudoku/contracts/hello-world/: Cargo.toml  verification_hash.txt
contracts/sudoku/contracts/hello-world/src/: lib.rs
