[package]
description = "ZK-Sudoku Verifier on Stellar"
repository = "https://github.com/bigabe001/stellar-zk-sudoku"
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
